@@ -2,69 +2,91 @@ package com.warehouse.supplier;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.doThrow;
-import static org.mockito.Mockito.when;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Stream;
 
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.api.function.Executable;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase;
+import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
+import org.springframework.test.context.ContextConfiguration;
+import org.springframework.test.context.TestExecutionListeners;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
+import org.springframework.test.context.support.DependencyInjectionTestExecutionListener;
 
-import com.warehouse.supplier.infrastructure.adapter.secondary.exception.SupplierNotFoundException;
+import com.github.springtestdbunit.TransactionDbUnitTestExecutionListener;
+import com.github.springtestdbunit.annotation.DatabaseSetup;
+import com.warehouse.supplier.configuration.SupplierTestConfiguration;
 import com.warehouse.supplier.domain.model.Supplier;
 import com.warehouse.supplier.domain.model.SupplierAddRequest;
 import com.warehouse.supplier.domain.model.SupplierAddResponse;
 import com.warehouse.supplier.domain.port.primary.SupplyPortImpl;
+import com.warehouse.supplier.domain.port.secondary.SupplierRepository;
 import com.warehouse.supplier.domain.service.SupplierCodeGeneratorService;
 import com.warehouse.supplier.domain.service.SupplierService;
+import com.warehouse.supplier.infrastructure.adapter.secondary.exception.SupplierNotFoundException;
 
-@ExtendWith(MockitoExtension.class)
-public class SupplierPortImplTest {
+@ExtendWith(SpringExtension.class)
+@DataJpaTest
+@ContextConfiguration(classes = SupplierTestConfiguration.class)
+@TestExecutionListeners({DependencyInjectionTestExecutionListener.class, TransactionDbUnitTestExecutionListener.class})
+@AutoConfigureTestDatabase(replace = AutoConfigureTestDatabase.Replace.NONE)
+@DatabaseSetup("/dataset/supplier.xml")
+public class SupplierRestIntegrationTest {
 
-    @Mock
-    private SupplierService service;
 
+    @Autowired
+    private SupplierRepository supplierRepository;
+
+    @Autowired
     private SupplyPortImpl supplyPort;
 
+    @Autowired
+    private SupplierService supplierService;
 
-    @Mock
-    private SupplierCodeGeneratorService generatorService;
+    @Autowired
+    private SupplierCodeGeneratorService supplierCodeGeneratorService;
 
+    private final String depotCode = "KT1";
+    private final String firstName = "Sebastian";
+    private final String lastName = "Soja";
+    private final String telephone = "123";
+    private final String supplierCode = "supplierCode";
 
-    @BeforeEach
-    void setup() {
-        supplyPort = new SupplyPortImpl(service, generatorService);
-    }
 
     @Test
     void shouldCreateSuppliers() {
         // given
         final SupplierAddRequest request = buildSupplierAddRequest();
-
-        final Supplier supplier = createSupplier();
-
-        when(generatorService.generate()).thenReturn("code");
-        when(service.createMultipleSuppliers(Collections.singletonList(supplier))).thenReturn(
-                Collections.singletonList(supplier));
         // when
 		final List<SupplierAddResponse> supplierAddResponseList = supplyPort
-				.createMultipleSuppliers(Stream.of(request).toList());
+				.createMultipleSuppliers(List.of(request));
         // then
         assertThat(supplierAddResponseList.get(0).getSupplier()).isNotNull();
     }
 
     @Test
-    void shouldFindAllSuppliers() {
+    void shouldCreateSuppliersWithGivenSupplierCode() {
         // given
-        final Supplier supplier = createSupplier();
-        when(service.findAll()).thenReturn(
-                Collections.singletonList(supplier));
+        final SupplierAddRequest request = SupplierAddRequest.builder()
+                .depotCode(depotCode)
+                .firstName(firstName)
+                .lastName(lastName)
+                .telephone(telephone)
+                .supplierCode(supplierCode)
+                .build();
+        // when
+        final List<SupplierAddResponse> supplierAddResponseList = supplyPort
+                .createMultipleSuppliers(List.of(request));
+        // then
+        assertThat(supplierAddResponseList.get(0).getSupplier()).isNotNull();
+        assertEquals(supplierAddResponseList.get(0).getSupplier().getSupplierCode(), supplierCode);
+    }
+
+    @Test
+    void shouldFindAllSuppliers() {
         // when
         final List<Supplier> suppliers = supplyPort.findAllSuppliers();
         // then
@@ -74,19 +96,16 @@ public class SupplierPortImplTest {
     @Test
     void shouldReturnEmptyList() {
         // given
-        when(service.findAll()).thenReturn(
-                Collections.emptyList());
         // when
         final List<Supplier> suppliers = supplyPort.findAllSuppliers();
         // then
-        assertTrue(suppliers.isEmpty());
+        assertFalse(suppliers.isEmpty());
     }
 
     @Test
     void shouldFindSupplierByCode() {
         // given
         final String code = "code";
-        when(service.findSupplierByCode(code)).thenReturn(createSupplier());
         // when
         final Supplier supplier = supplyPort.findSupplierByCode(code);
         // then
@@ -96,11 +115,7 @@ public class SupplierPortImplTest {
     @Test
     void shouldNotFindSupplierByCode() {
         // given
-        final String code = "code";
-        final SupplierNotFoundException exception = new SupplierNotFoundException("Supplier was not found");
-        doThrow(exception)
-                .when(service)
-                .findSupplierByCode(code);
+        final String code = "fakeCode";
         // when
         final Executable executable = () -> supplyPort.findSupplierByCode(code);
         // then
@@ -113,7 +128,6 @@ public class SupplierPortImplTest {
     void shouldFindManyBySupplierCode() {
         // given
         final String code = "code";
-        when(service.findSuppliersBySupplierCode(code)).thenReturn(List.of(createSupplier()));
         // when
         final List<Supplier> supplier = supplyPort.findSuppliersByCode(code);
         // then
@@ -123,8 +137,7 @@ public class SupplierPortImplTest {
     @Test
     void shouldNotFindManyBySupplierCode() {
         // given
-        final String code = "code";
-        when(service.findSuppliersBySupplierCode(code)).thenReturn(Collections.emptyList());
+        final String code = "fakeCode";
         // when
         final List<Supplier> supplier = supplyPort.findSuppliersByCode(code);
         // then
@@ -135,7 +148,6 @@ public class SupplierPortImplTest {
     void shouldFindManyByDepotCode() {
         // given
         final String code = "code";
-        when(service.findSuppliersByDepotCode(code)).thenReturn(List.of(createSupplier()));
         // when
         final List<Supplier> supplier = supplyPort.findSuppliersByDepotCode(code);
         // then
@@ -146,7 +158,6 @@ public class SupplierPortImplTest {
     void shouldNotFindManyByDepotCode() {
         // given
         final String code = "code";
-        when(service.findSuppliersByDepotCode(code)).thenReturn(Collections.emptyList());
         // when
         final List<Supplier> supplier = supplyPort.findSuppliersByDepotCode(code);
         // then
@@ -160,16 +171,6 @@ public class SupplierPortImplTest {
                 .lastName("Soja")
                 .telephone("123")
                 .build();
-    }
-
-    private Supplier createSupplier() {
-        final Supplier supplier = new Supplier();
-        supplier.setFirstName("Sebastian");
-        supplier.setLastName("Soja");
-        supplier.setSupplierCode("code");
-        supplier.setTelephone("123");
-        supplier.setDepotCode("KT1");
-        return supplier;
     }
 
     private <T> T expectedToBe(T t) {
